force-app/main/default/objects/CommercientSF__ArSalesMove__c/CommercientSF__ArSalesMove__c.object-meta.xml
<CustomObject>
    <label>Syspro AR Sales Move</label>
    <nameField>
        <label>Syspro AR Sales Move Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro AR Sales Moves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>