force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__ArCustomer__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ArCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Customer Record</label>
    <referenceTo>CommercientSF__ArCustomer__c</referenceTo>
    <relationshipName>ArSalesMoves</relationshipName>
    <type>Lookup</type>
</CustomField>