force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__Area__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Area__c</fullName>
    <label>Geographic area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>