force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__ArInvoice__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ArInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Invoice</label>
    <referenceTo>CommercientSF__ArInvoice__c</referenceTo>
    <relationshipName>ArSalesMoves</relationshipName>
    <type>Lookup</type>
</CustomField>