force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__DetailLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DetailLine__c</fullName>
    <label>Detail line number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>