force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__DiscValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscValue__c</fullName>
    <label>Line and inv discount value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>