force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__ForInvoiceValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ForInvoiceValue__c</fullName>
    <label>Foreign invoice value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>