force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__InvoiceCurrency__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceCurrency__c</fullName>
    <label>Invoice currency code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>