force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__InvoiceQty__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceQty__c</fullName>
    <label>Quantity invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>