force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__InvoiceValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceValue__c</fullName>
    <label>Sale amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>