force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__Register__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Register__c</fullName>
    <label>Register number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>