force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__SalesOrderLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesOrderLine__c</fullName>
    <label>Sales order line number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>