force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__SorMasterRep__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SorMasterRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Sales Order</label>
    <referenceTo>CommercientSF__SorMasterRep__c</referenceTo>
    <relationshipName>ArSalesMoves</relationshipName>
    <type>Lookup</type>
</CustomField>