force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__SummaryLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SummaryLine__c</fullName>
    <label>Summary line number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>