force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__TaxValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxValue__c</fullName>
    <label>Tax value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>