force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__TaxValueFst__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxValueFst__c</fullName>
    <label>Federal sales tax amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>