force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__TrnDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrnDate__c</fullName>
    <label>Transaction date</label>
    <type>Date</type>
</CustomField>