force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__TrnMonth__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrnMonth__c</fullName>
    <label>Transaction posting month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>