force-app/main/default/objects/CommercientSF__ArSalesMove__c/fields/CommercientSF__TrnYear__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrnYear__c</fullName>
    <label>Transaction posting year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>